fix: Устранить замечания, итерация 2